Add new task types

--- a/tasks/tasks.html
+++ b/tasks/tasks.html
@@ -17,6 +17,8 @@
         <button class="minecraft-button nav-theme-button" onclick="document.getElementById('shares-and-percentages').scrollIntoView({behavior: 'smooth'});">Доли и проценты</button>
         <button class="minecraft-button nav-theme-button" onclick="document.getElementById('inequalities-section').scrollIntoView({behavior: 'smooth'});">Неравенства</button>
         <button class="minecraft-button nav-theme-button" onclick="document.getElementById('sales-section').scrollIntoView({behavior: 'smooth'});">Скидки и покупки</button>
+        <button class="minecraft-button nav-theme-button" onclick="document.getElementById('equations-section').scrollIntoView({behavior: 'smooth'});">Составление уравнений</button>
+        <button class="minecraft-button nav-theme-button" onclick="document.getElementById('complex-conditions-section').scrollIntoView({behavior: 'smooth'});">Задачи со сложным условием</button>
     </div>
     <div class="tasks-container">
         <h1 id="multiplication-section" class="tasks-title">Задачи на умножение</h1>
@@ -354,6 +356,38 @@
             <a href="sales_tasks/easy_tasks/task8.html" class="minecraft-button task-button">Задание 8</a>
             <a href="sales_tasks/easy_tasks/task9.html" class="minecraft-button task-button">Задание 9</a>
             <a href="sales_tasks/easy_tasks/task10.html" class="minecraft-button task-button">Задание 10</a>
+        </div>
+
+        <img src="../assets/images/separator.png" alt="..." class="separator">
+        <h1 id="equations-section" class="tasks-title">Задачи на составление уравнений (ВПР 4 класс)</h1>
+        <h2 class="sub-tasks-title" style="font-size: 22px;"><img src="../assets/images/iron_ingot.png" alt="..." class="easy-level-png">Лёгкий уровень:<img src="../assets/images/iron_ingot.png" alt="..." class="easy-level-png"></h2>
+        <div class="tasks-grid">
+            <a href="equations_tasks/easy_tasks/task1.html" class="minecraft-button task-button">Задание 1</a>
+            <a href="equations_tasks/easy_tasks/task2.html" class="minecraft-button task-button">Задание 2</a>
+            <a href="equations_tasks/easy_tasks/task3.html" class="minecraft-button task-button">Задание 3</a>
+            <a href="equations_tasks/easy_tasks/task4.html" class="minecraft-button task-button">Задание 4</a>
+            <a href="equations_tasks/easy_tasks/task5.html" class="minecraft-button task-button">Задание 5</a>
+            <a href="equations_tasks/easy_tasks/task6.html" class="minecraft-button task-button">Задание 6</a>
+            <a href="equations_tasks/easy_tasks/task7.html" class="minecraft-button task-button">Задание 7</a>
+            <a href="equations_tasks/easy_tasks/task8.html" class="minecraft-button task-button">Задание 8</a>
+            <a href="equations_tasks/easy_tasks/task9.html" class="minecraft-button task-button">Задание 9</a>
+            <a href="equations_tasks/easy_tasks/task10.html" class="minecraft-button task-button">Задание 10</a>
+        </div>
+
+        <img src="../assets/images/separator.png" alt="..." class="separator">
+        <h1 id="complex-conditions-section" class="tasks-title">Задачи со сложными условиями (ВПР 4 класс)</h1>
+        <h2 class="sub-tasks-title" style="font-size: 22px;"><img src="../assets/images/iron_ingot.png" alt="..." class="easy-level-png">Лёгкий уровень:<img src="../assets/images/iron_ingot.png" alt="..." class="easy-level-png"></h2>
+        <div class="tasks-grid">
+            <a href="equations_tasks/easy_tasks/task1.html" class="minecraft-button task-button">Задание 1</a>
+            <a href="equations_tasks/easy_tasks/task2.html" class="minecraft-button task-button">Задание 2</a>
+            <a href="equations_tasks/easy_tasks/task3.html" class="minecraft-button task-button">Задание 3</a>
+            <a href="equations_tasks/easy_tasks/task4.html" class="minecraft-button task-button">Задание 4</a>
+            <a href="equations_tasks/easy_tasks/task5.html" class="minecraft-button task-button">Задание 5</a>
+            <a href="equations_tasks/easy_tasks/task6.html" class="minecraft-button task-button">Задание 6</a>
+            <a href="equations_tasks/easy_tasks/task7.html" class="minecraft-button task-button">Задание 7</a>
+            <a href="equations_tasks/easy_tasks/task8.html" class="minecraft-button task-button">Задание 8</a>
+            <a href="equations_tasks/easy_tasks/task9.html" class="minecraft-button task-button">Задание 9</a>
+            <a href="equations_tasks/easy_tasks/task10.html" class="minecraft-button task-button">Задание 10</a>
         </div>
     </div>
 </body>
